--- a/src/styles/Styles.css
+++ b/src/styles/Styles.css
@@ -11,10 +11,21 @@ a {
     text-align: center !important;
 }
 
+html {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.backgroundPic {
+    background: url(images/PlaylisterBackground.jpg) no-repeat center center fixed;
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
+}
+
 .buttonController {
     display: flex;
     border-radius: 10em;
-    border: 5px solid black;
+    border: 5px solid #ffeb3b;
     width: 70%;
     margin: 0 auto;
 }
@@ -25,13 +36,13 @@ a {
 }
 
 .leftActive {
-    background: black;
-    color: white;
+    background: #ffeb3b;
+    color: black;
     border-radius: 10em 0 0 10em;
 }
 
 .rightActive {
-    background: black;
-    color: white;
+    background: #ffeb3b;
+    color: black;
     border-radius: 0 10em 10em 0;
 }
