--- a/src/styles/Styles.css
+++ b/src/styles/Styles.css
@@ -46,3 +46,21 @@ html {
     color: black;
     border-radius: 0 10em 10em 0;
 }
+
+div#root {
+    width: 100vw;
+    height: 100vh;
+}
+
+.styledGrid {
+    margin: 5vh 5vw;
+}
+
+.styledButton {
+    margin: 5vh 5vw;
+}
+
+.modal {
+    width: 30vw !important;
+    height: 30vh !important;
+}
